se reparo un bug en el overflow

--- a/index.css
+++ b/index.css
@@ -126,7 +126,7 @@ nav a:hover {
     padding-bottom: 2rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 1rem;
     overflow: auto;
 }
